--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "nanohub-dashboards"
-version = "0.1.0"
+dynamic = ["version"]
 description = "Python client library for interacting with the nanoHUB Dashboard API"
 readme = "README.md"
 requires-python = ">=3.6"
